[gd_scene load_steps=13 format=3 uid="uid://cinc84vpc2a4s"]

[ext_resource type="Script" uid="uid://n1bsl85ya8ds" path="res://Scripts/home_of_hector.gd" id="1_7yy64"]
[ext_resource type="PackedScene" uid="uid://cgeiuvmq46mhr" path="res://Scenes/Player_1.tscn" id="2_3hxkl"]
[ext_resource type="TileSet" uid="uid://cfw1qrmqi8ulr" path="res://main_map_2.tres" id="2_svkma"]
[ext_resource type="PackedScene" uid="uid://b4ftj14ld58if" path="res://Scenes/ui.tscn" id="5_676qs"]
[ext_resource type="Texture2D" uid="uid://ftsqesla06t5" path="res://Textures/Buttons/keyboard/keyboard_e.png" id="5_e7x4g"]
[ext_resource type="Script" uid="uid://c33lbgbtb7owd" path="res://Scripts/Transition_To_mainMap.gd" id="5_so67a"]
[ext_resource type="Texture2D" uid="uid://5poghk83m0gg" path="res://Textures/piano.png" id="6_6ytuu"]
[ext_resource type="Texture2D" uid="uid://du2naogiwerkj" path="res://Textures/point_exclam.png" id="7_cm1j3"]
[ext_resource type="PackedScene" uid="uid://c7sxy68le1a5y" path="res://Scenes/craft_table.tscn" id="8_ek832"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w4vl6"]
size = Vector2(24, 25.6667)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_na2ne"]
size = Vector2(46, 45)

[sub_resource type="CircleShape2D" id="CircleShape2D_lko8x"]
radius = 85.21

[node name="HomeOfHector" type="Node2D"]
script = ExtResource("1_7yy64")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TileMap" type="TileMap" parent="Control"]
z_index = 1
texture_filter = 1
texture_repeat = 1
scale = Vector2(4, 4)
tile_set = ExtResource("2_svkma")
format = 2
layer_0/tile_data = PackedInt32Array(196614, 4325381, 15, 196615, 4390917, 15, 196616, 4390917, 15, 196617, 4390917, 15, 196618, 4390917, 15, 196619, 4390917, 15, 196620, 4390917, 15, 196621, 4456453, 15, 196623, 4325381, 15, 196624, 4390917, 15, 196625, 4390917, 15, 196626, 4390917, 15, 196627, 4390917, 15, 196628, 4390917, 15, 196629, 4390917, 15, 196630, 4456453, 15, 262166, 4456453, 16, 327702, 4456453, 16, 393238, 4456453, 16, 458774, 4456453, 16, 524310, 4456453, 16, 589846, 4456453, 16, 655382, 4456453, 16, 720918, 4456453, 16, 786454, 4456453, 16, 851990, 4456453, 17, 851989, 4390917, 17, 851988, 4390917, 17, 851987, 4390917, 17, 851986, 4390917, 17, 851985, 4390917, 17, 851984, 4390917, 17, 851983, 4325381, 17, 851981, 4456453, 17, 851980, 4390917, 17, 851979, 4390917, 17, 851978, 4390917, 17, 851977, 4390917, 17, 851976, 4390917, 17, 851975, 4390917, 17, 851974, 4325381, 17, 786438, 4325381, 16, 720902, 4325381, 16, 655366, 4325381, 16, 589830, 4325381, 16, 524294, 4325381, 16, 458758, 4325381, 16, 393222, 4325381, 16, 327686, 4325381, 16, 262150, 4325381, 16, 262157, 4456453, 16, 327693, 4456453, 16, 393229, 4390917, 18, 393230, 4390917, 15, 393231, 4325381, 18, 327695, 4325381, 16, 262159, 4325381, 16, 262151, 4390917, 16, 327687, 4390917, 16, 393223, 4390917, 16, 458759, 4390917, 16, 524295, 4390917, 16, 589831, 4390917, 16, 655367, 4390917, 16, 720903, 4390917, 16, 786439, 4390917, 16, 262152, 4390917, 16, 327688, 4390917, 16, 393224, 4390917, 16, 458760, 4390917, 16, 524296, 4390917, 16, 589832, 4390917, 16, 655368, 4390917, 16, 720904, 4390917, 16, 786440, 4390917, 16, 262153, 4390917, 16, 327689, 4390917, 16, 393225, 4390917, 16, 458761, 4390917, 16, 524297, 4390917, 16, 589833, 4390917, 16, 655369, 4390917, 16, 720905, 4390917, 16, 786441, 4390917, 16, 262154, 4390917, 16, 327690, 4390917, 16, 393226, 4390917, 16, 458762, 4390917, 16, 524298, 4390917, 16, 589834, 4390917, 16, 655370, 4390917, 16, 720906, 4390917, 16, 786442, 4390917, 16, 262155, 4390917, 16, 327691, 4390917, 16, 393227, 4390917, 16, 458763, 4390917, 16, 524299, 4390917, 16, 589835, 4390917, 16, 655371, 4390917, 16, 720907, 4390917, 16, 786443, 4390917, 16, 262156, 4390917, 16, 327692, 4390917, 16, 393228, 4390917, 16, 458764, 4390917, 16, 524300, 4390917, 16, 589836, 4390917, 16, 655372, 4390917, 16, 720908, 4390917, 16, 786444, 4390917, 16, 458765, 4390917, 16, 524301, 4390917, 16, 589837, 4390917, 16, 655373, 4390917, 16, 720909, 4390917, 16, 786445, 4390917, 19, 458766, 4390917, 16, 524302, 4390917, 16, 589838, 4390917, 16, 655374, 4390917, 16, 720910, 4390917, 16, 786446, 4390917, 16, 458767, 4390917, 16, 524303, 4390917, 16, 589839, 4390917, 16, 655375, 4390917, 16, 720911, 4390917, 16, 786447, 4325381, 19, 262160, 4390917, 16, 327696, 4390917, 16, 393232, 4390917, 16, 458768, 4390917, 16, 524304, 4390917, 16, 589840, 4390917, 16, 655376, 4390917, 16, 720912, 4390917, 16, 786448, 4390917, 16, 262161, 4390917, 16, 327697, 4390917, 16, 393233, 4390917, 16, 458769, 4390917, 16, 524305, 4390917, 16, 589841, 4390917, 16, 655377, 4390917, 16, 720913, 4390917, 16, 786449, 4390917, 16, 262162, 4390917, 16, 327698, 4390917, 16, 393234, 4390917, 16, 458770, 4390917, 16, 524306, 4390917, 16, 589842, 4390917, 16, 655378, 4390917, 16, 720914, 4390917, 16, 786450, 4390917, 16, 262163, 4390917, 16, 327699, 4390917, 16, 393235, 4390917, 16, 458771, 4390917, 16, 524307, 4390917, 16, 589843, 4390917, 16, 655379, 4390917, 16, 720915, 4390917, 16, 786451, 4390917, 16, 262164, 4390917, 16, 327700, 4390917, 16, 393236, 4390917, 16, 458772, 4390917, 16, 524308, 4390917, 16, 589844, 4390917, 16, 655380, 4390917, 16, 720916, 4390917, 16, 786452, 4390917, 16, 262165, 4390917, 16, 327701, 4390917, 16, 393237, 4390917, 16, 458773, 4390917, 16, 524309, 4390917, 16, 589845, 4390917, 16, 655381, 4390917, 16, 720917, 4390917, 16, 786453, 4390917, 16)

[node name="FondNoir" type="ColorRect" parent="Control"]
layout_mode = 0
offset_left = -256.0
offset_right = 2057.0
offset_bottom = 1144.0
color = Color(0, 0, 0, 1)

[node name="Sortie1" type="ColorRect" parent="Control"]
layout_mode = 0
offset_left = 891.0
offset_top = 786.0
offset_right = 965.0
offset_bottom = 873.0
color = Color(0.407843, 0.407843, 0.407843, 1)

[node name="Sortie2" type="ColorRect" parent="Control"]
layout_mode = 0
offset_left = 891.0
offset_top = 862.0
offset_right = 965.0
offset_bottom = 890.0
color = Color(0.435294, 0.435294, 0.435294, 0.733333)

[node name="Player_One" parent="Control" instance=ExtResource("2_3hxkl")]
z_index = 5
position = Vector2(882, 725)
scale = Vector2(2.7, 2.7)

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource("5_so67a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(929, 856.5)
scale = Vector2(3, 3)
shape = SubResource("RectangleShape2D_w4vl6")

[node name="Label_E" type="Sprite2D" parent="Area2D"]
visible = false
texture_filter = 1
position = Vector2(928, 864)
scale = Vector2(2, 2)
texture = ExtResource("5_e7x4g")

[node name="ui" parent="." instance=ExtResource("5_676qs")]

[node name="Piano1" type="Area2D" parent="."]
z_index = 2
position = Vector2(1213, 291)

[node name="CharacterBody2D" type="CharacterBody2D" parent="Piano1"]
texture_filter = 1
texture_repeat = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Piano1/CharacterBody2D"]
position = Vector2(0, -2.5)
shape = SubResource("RectangleShape2D_na2ne")

[node name="OldGuyWhoLostIsCrampt√©Real" type="Sprite2D" parent="Piano1/CharacterBody2D"]
scale = Vector2(6, 6)
texture = ExtResource("6_6ytuu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Piano1"]
shape = SubResource("CircleShape2D_lko8x")

[node name="Trigger" type="Sprite2D" parent="Piano1"]
visible = false
position = Vector2(0, -73)
scale = Vector2(2.9, 2.9)
texture = ExtResource("7_cm1j3")

[node name="Interact" type="Sprite2D" parent="Piano1"]
visible = false
texture_filter = 1
position = Vector2(0, -51)
scale = Vector2(2, 2)
texture = ExtResource("5_e7x4g")

[node name="CanvasJour_Nuit" type="CanvasModulate" parent="."]

[node name="CraftTable" parent="." instance=ExtResource("8_ek832")]
z_index = 1
y_sort_enabled = true
position = Vector2(469, 209)

[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_body_entered"]
[connection signal="body_exited" from="Area2D" to="Area2D" method="_on_body_exited"]
[connection signal="body_entered" from="Piano1" to="." method="_on_piano_1_body_entered"]
[connection signal="body_exited" from="Piano1" to="." method="_on_piano_1_body_exited"]
